# bare-web-kit-gtk

./: CMakeLists.txt  README.md  binding.c  index.js  package.json
.github/workflows/: prebuild.yml  test.yml
lib/: web-view.h  web-view.js
